--- a/conf/relations/DPL_only_dl.yaml
+++ b/conf/relations/DPL_only_dl.yaml
@@ -1,7 +1,7 @@
 #仅仅开启dl与一般的interaction,用来说明dl边价值
 name: DPL_only_dl
 defaults:
-  - dataclass
+  - base_relations
   - _self_
 flags:
       dp_interaction: true
