--- a/environment.yaml
+++ b/environment.yaml
@@ -59,4 +59,4 @@ dependencies:
       - torch-spline-conv --find-links https://data.pyg.org/whl/torch-2.2.0+cu118.html
       - torch-geometric
       - pubchempy
-      - research_template @ git+https://github.com/wozonet1/common_utils.git@cc1fea8
+      - -e ./common_utils
