--- a/conf/relations/DPL_no_sim.yaml
+++ b/conf/relations/DPL_no_sim.yaml
@@ -1,7 +1,7 @@
 # This component defines the 'pure_interactions' configuration
 name: DPL_no_sim
 defaults:
-  - base_relations
+  - _base
   - _self_
 flags:
       dp_interaction: true
