--- a/conf/relations/DPL_only_dl.yaml
+++ b/conf/relations/DPL_only_dl.yaml
@@ -1,12 +1,12 @@
 #仅仅开启dl与一般的interaction,用来说明dl边价值
 name: DPL_only_dl
 defaults:
-  - base_relations
+  - _base
   - _self_
 flags:
-      dp_interaction: true
-      lp_interaction: true
-      pp_similarity: false
-      dd_similarity: false
-      dl_similarity: true
-      ll_similarity: false
+  dp_interaction: true
+  lp_interaction: true
+  pp_similarity: false
+  dd_similarity: false
+  dl_similarity: true
+  ll_similarity: false
