--- a/conf/relations/DP_sim.yaml
+++ b/conf/relations/DP_sim.yaml
@@ -4,9 +4,9 @@ defaults:
   - _base
   - _self_
 flags:
-  dp_interaction: true
-  lp_interaction: false
-  pp_similarity: true
-  dd_similarity: true
-  dl_similarity: false
-  ll_similarity: false
+  drug_protein_interaction: true
+  ligand_protein_interaction: false
+  protein_protein_similarity: true
+  drug_drug_similarity: true
+  drug_ligand_similarity: false
+  ligand_ligand_similarity: false
