使用ruff与isort格式化,加入precommit

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -4,6 +4,7 @@ defaults:
   - predictor: rgcn
   - relations: DP_sim
   - data_params: strict_strong #数据处理相关,且影响最终数据内容的参数
+  - validators: default
   - analysis: split_effect # 仅仅在分析时用到
   - _self_
 
