--- a/conf/data_params/strict_strong.yaml
+++ b/conf/data_params/strict_strong.yaml
@@ -8,5 +8,17 @@ affinity_threshold_nM: 100
 
 filtering:
   enabled: true
-  molecular_weight: { min: 100, max: 500 } # 严格的Lipinski规则
+  
+  # 阶段一
+  apply_pains_filter: true
+  apply_bms_filter: true
+  
+  # 阶段二
+  molecular_weight: { min: 150, max: 550 }
   logp: { min: -2.0, max: 5.0 }
+  h_bond_donors: { max: 5 }
+  h_bond_acceptors: { max: 10 }
+  
+  # 阶段三
+  qed: { min: 0.35 }
+  sa_score: { max: 6.0 }
