--- a/environment.yaml
+++ b/environment.yaml
@@ -59,4 +59,5 @@ dependencies:
       - torch-spline-conv --find-links https://data.pyg.org/whl/torch-2.2.0+cu118.html
       - torch-geometric
       - pubchempy
+      - faiss-cpu
       - -e ./common_utils
