--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ __pycache__/
 .ruff_cache/
 *.pyc
 *.egg-info/
+.mypy_cache/
 # ===================================================================
 # 3. Project-Specific Artifacts (本项目特有)
 # ===================================================================
