refactor(arch): Decouple training logic into a separate starter project
This commit performs a major architectural refactoring by moving all training-specific logic out of the core `helixpipe` package. This is a crucial step towards positioning HelixPipe as a pure, framework-agnostic data engine.

The core motivations for this change are:
- **Decoupling**: To create a clean separation between the data processing pipeline (the engine) and the model training application (the consumer).
- **Flexibility**: To allow users to consume HelixPipe's data artifacts with any training framework they prefer (e.g., pure PyTorch, Ignite, Accelerate), not just PyTorch Lightning.
- **Clarity**: To sharpen HelixPipe's core value proposition as a powerful data engineering tool for bioinformatics.

**Changes:**

- The `src/helixpipe/models/` and `src/helixpipe/training/` directories, along with the top-level `train.py` script, have been moved.
- These modules will now be maintained in a separate repository, `helixpipe-lightning-starter`, which will serve as the official example of how to use the `helixpipe` package.

This change intentionally removes the training capabilities from this repository. The `run.py` entry point is now solely responsible for executing the data generation pipeline.

Related to #3

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "HelixPipe" # 给您的项目起个名字
 version = "0.1.0"
-description = "A framework for DTI prediction using heterogeneous GNNs."
+description = "A reproducible, config-driven data engine for building heterogeneous knowledge graphs for drug discovery."
 requires-python = ">=3.9"
 
 [tool.setuptools.packages.find]
