--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ fake*/
 sync_codes/
 todolist/
 
+_examples/
 # ===================================================================
 # 4. Data Files (数据与代码分离)
 # ===================================================================
