feat(typing):add static type checking with pylance

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,44 +82,64 @@ helixlib = "src/helixlib"
 [tool.ruff.lint]
 select = ["E", "F", "I", "W"]
 ignore = ["E501",]
+
+
+[tool.pyright]
+# 定义分析范围
+include = ["src", "tests", "analysis"]
+# 定义导入路径
+extraPaths = ["src"]
+# 默认检查模式
+typeCheckingMode = "standard"
+
+# 定义 'src' 环境的严格规则
+[[tool.pyright.executionEnvironments]]
+root = "src"
+typeCheckingMode = "strict"
+
+# 定义 'tests' 和 'analysis' 环境的宽松规则
+[[tool.pyright.executionEnvironments]]
+root = "tests"
+reportArgumentType = "none" # 允许 Mock 对象
+
+[[tool.pyright.executionEnvironments]]
+root = "analysis"
+reportArgumentType = "none"
+
+
+# ==========================================================
+# MyPy Configuration - For CI/CD and Batch Analysis
+# ==========================================================
 [tool.mypy]
-# 忽略所有已安装的第三方库中缺失的类型提示
-# (例如，如果你导入了requests，mypy不会抱怨requests没有类型提示)
-ignore_missing_imports = true
-# -- 核心规则 --
-disallow_untyped_defs = false  # [重要] 一开始先设为 False，允许未注解的函数
+# 定义导入路径 (与 extraPaths 对应)
+mypy_path = "src/"
+
+# --- 核心严格选项 (与 Pyright 'strict' 模式对齐) ---
+check_untyped_defs = true
 disallow_any_unimported = true
-# 【核心配置】
-# 不要因为一个模块没有 py.typed 就跳过它
-follow_imports = "normal" 
-
-# 明确告诉mypy你的源代码在哪里
-files = ["src"]
-
-# 增加一些严格的检查选项 (推荐)
+disallow_untyped_defs = true
+no_implicit_optional = true
+show_error_codes = true
+strict_equality = true
+warn_redundant_casts = true
 warn_return_any = true
 warn_unused_configs = true
-exclude = '''
-(?x)(
-    ^src/helixpipe/analysis/.*$
-    |
-    ^tests/.*$
-    |
-    ^src/helixpipe/training/.*$
-    |
-    ^src/helixpipe/models/.*$
-  )
-'''
-[[tool.mypy.overrides]]
-module = "rdkit.*"
-# 1. 告诉 mypy 不要去分析 rdkit 的源代码，只使用类型存根 (.pyi) 文件
-follow_imports = "skip"
-# 2. [关键] 同时告诉 mypy，如果在这些存根文件中发现了任何错误，请直接忽略它们
-ignore_errors = true
+warn_unused_ignores = true
 
-[[tool.mypy.overrides]]
-module = "torch_geometric.*"
-# 强制 mypy 像对待没有类型提示的库一样对待 PyG，以避免其内部的解析错误
-follow_imports = "skip"
-ignore_errors = true
 
+
+# --- 忽略第三方库的导入错误 (与 Pyright 的默认行为对齐) ---
+[[tool.mypy.overrides]]
+module = [
+    "pandas.*", "numpy.*", "torch.*", "torch_geometric.*", "omegaconf.*", 
+    "hydra.*", "rdkit.*", "tqdm.*", "sklearn.*", "research_template.*", "joblib.*"
+]
+ignore_missing_imports = true
+
+# --- 【核心】为 'tests' 和 'analysis' 目录定义宽松规则 ---
+# (MyPy 使用 per-file 规则，而不是像 Pyright 那样的环境)
+[[tool.mypy.overrides]]
+# 匹配 tests/ 和 analysis/ 目录下的所有文件
+module = ["tests.*", "analysis.*"]
+# 关闭“参数类型不匹配”的检查
+disable_error_code = "arg-type"
