--- a/conf/data_params/brenda/default.yaml
+++ b/conf/data_params/brenda/default.yaml
@@ -1,10 +1,5 @@
-name: "gtopdb"
-
-defaults:
-  - _base
-  - _self_
-
 affinity_threshold_nM: 10000
+km_threshold_nM: 10000
 
 filtering:
   enabled: false
