feat(env): install basic env with conda while other packager installed with pip

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ data/
 *.md
 *.png
 
+!requirements.txt
 # ===================================================================
 # 6. Exceptions to General Rules (豁免规则，放在最后)
 # ===================================================================
