--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -7,6 +7,7 @@ defaults:
   - validators: default
   - training: cold_drug_protagonist_eval
   - analysis: split_effect # 仅仅在分析时用到
+  - storage: tensorvault
   - _self_
 
 hydra:
