fix(pipeline): harden ID handling, fix splitter logic, and refine sampling strategy
This commit addresses several critical stability and logic issues discovered during the end-to-end testing of the cold-start pipeline.

1. ID Sanitization & Type Safety (Root Cause Fix):
   - refactor(BaseProcessor): Implemented `_smart_clean_id_column` to strictly enforce `Int64` (nullable int) typing for ID columns immediately after loading. This prevents floating-point pollution (e.g., `123.0`) from causing lookup failures in `IDMapper`.
   - fix(SelectorExecutor): Added defensive fuzzy matching logic (int/float/str conversion) in `_get_entity_column_match_mask` as a secondary safety net.
   - fix(GraphBuilder): Resolved `faiss` type hint conflicts and fixed `OmegaConf` type conversion issues.

2. DataSplitter Logic Fixes:
   - fix(DataSplitter): Adjusted `__init__` logic to ensure `evaluation_scope` is properly initialized even in 'warm start' mode, preventing RuntimeErrors.
   - refactor(DataSplitter): Renamed the ambiguous `split_result` variable to `fold_indices` in `__next__` and `_split_data` to match the actual data flow and fix type annotation errors.

3. Configuration & Strategy:
   - conf(sampling): Updated `colddrug_ligand` sampling strategy. Replaced brittle `entity_types: [drug]` matching with robust `meta_types: [molecule] + from_sources: [bindingdb]` logic. This ensures correct protagonist sampling regardless of upstream type naming nuances.

4. Developer Experience:
   - feat(debug): Added `scripts/debug_stage7.py`. This script allows rehydrating `IDMapper` and `InteractionStore` from intermediate artifacts (`nodes.csv`, etc.), enabling second-level iteration on Splitter/GraphBuilder logic without re-running the full pipeline.

--- a/conf/data_params/exp_cold_start_test.yaml
+++ b/conf/data_params/exp_cold_start_test.yaml
@@ -17,6 +17,6 @@ defaults:
   - _self_
 
 # 定义该实验的名称
-name: "experiment_cold_drug_sampling_with_strict_filtering"
+name: "exp_cold_start_test"
 # 其他顶层覆盖
 
