--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -3,7 +3,7 @@ defaults:
   - data_structure: bindingdb # 描述文件架构与文件内列的名字,与最终实际内容无关
   - relations: DPL_sim
   - data_params: exp_cold_start_test
-  - dataset_collection: gtopdb_brenda_aux # 辅助数据集的集合配置#TODO:是否还有必要?
+  - dataset_collection: gtopdb_brenda_aux # 辅助数据集的集合配置
   - validators: default
   - training: cold_drug_protagonist_eval
   - analysis: split_effect # 仅仅在分析时用到
