--- a/conf/env_core.yaml
+++ b/conf/env_core.yaml
@@ -23,10 +23,5 @@ dependencies:
   - biopython
   - matplotlib
   - seaborn
-  - tqdm
-  - joblib
 
-  # --- 工具 ---
-  - hydra-core
-  - hydra-joblib-launcher
-  - mlflow
+  - google-re2
