--- a/conf/data_params/test.yaml
+++ b/conf/data_params/test.yaml
@@ -1,14 +1,22 @@
-# conf/data_params/test.yaml
+# conf/data_params/exp_cold_start_test.yaml
 
 defaults:
-  - _base # 继承基础schema
+  # 1. 选择具体的过滤策略 (指向 conf/data_params/filtering/strict.yaml)
+  - filtering: disabled
+
+  # 2. 选择具体的采样策略 (指向 conf/data_params/sampling/cold_drug_1to1.yaml)
+  # 注意：这里不需要用 @sampling，因为我们在 Dataclass 的 defaults 里定义了组名就叫 sampling
+  # Hydra 会自动映射
+  - sampling: colddrug_ligand_1-1_sample-0.1
+
+  # 3. 选择处理器参数 (如果需要非默认的)
+  - bindingdb: default
+  - gtopdb: default
+  - brenda: default
+
   - _self_
 
-name: test
+# 定义该实验的名称
+name: "test"
+# 其他顶层覆盖
 
-# 【核心】在测试配置中，明确地禁用分子属性过滤器
-filtering:
-  enabled: false
-
-# 其他参数可以保持dataclass的默认值，或者在这里明确写出
-affinity_threshold_nM: 10000
